# prueba_tecnica_repo_202502

./: README.md
analista-ai/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test_citations.py  test_table_keywords.py
analista-ai/core/: __init__.py  database_context.txt  rag_tools.py  session_manager.py  settings.py  smolagent.py  sql_tools.py
analista-ai/static/: chat.html  index.html
data/: .gitignore  README.md  etl.md  pyproject.toml
data/rag/: rag_estractor.py
data/rag/vector_db_faiss/: index.faiss  index.pkl
data/sqlite_databases/: inseguridad_alimentaria.db  inseguridad_alimentaria_latest.db
data/src/etl_inseguridad/: __init__.py  extract.py  load.py  main.py  queries.py  transform.py
