[project]
name = "analista-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Juan Pablo Díaz Correa",email = "juanipis@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[all] (>=0.116.1,<0.117.0)",
    "pydantic-settings (>=2.5.2,<3.0.0)",
    "litellm (>=1.74.7,<2.0.0)",
    "smolagents[toolkit] (>=1.20.0,<2.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (<2.0)",
    "tabulate (>=0.9.0,<1.0.0)",
    "openpyxl (>=3.1.0,<4.0.0)",
    "matplotlib (>=3.8.0,<4.0.0)",
    "seaborn (>=0.13.0,<1.0.0)"
]

[tool.poetry]
name = "analista-ai"
version = "0.1.0"
description = ""
authors = ["Juan Pablo Díaz Correa <juanipis@gmail.com>"]
readme = "README.md"
packages = [{include = "core"}, {include = "main.py"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.116.1"}
pydantic-settings = "^2.5.2"
litellm = "^1.74.7"
smolagents = {extras = ["toolkit"], version = "^1.20.0"}
sqlalchemy = "^2.0.41"
pandas = "^2.3.1"
numpy = "<2.0"
tabulate = "^0.9.0"
openpyxl = "^3.1.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
